--- a/app/src/main/res/layout/content_cars_frag.xml
+++ b/app/src/main/res/layout/content_cars_frag.xml
@@ -20,7 +20,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/margin_top_no_car"
         android:fontFamily="sans-serif-light"
-        android:text="@string/msg_no_cars"
+        android:text="@string/msg_no_item"
         android:textColor="@color/msg_no_cars"
         android:textSize="@dimen/msg_no_car" />
 
