--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_if_settings_115801"
-        android:title="@string/title_settings" />
+        android:title="@string/title_items" />
 
 </menu>
