--- a/app/src/main/res/layout/content_items_frag.xml
+++ b/app/src/main/res/layout/content_items_frag.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent" />
 
     <TextView
-        android:id="@+id/empty_settings_view"
+        android:id="@+id/empty_items_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
