--- a/app/src/main/res/layout/content_car_dtls_frag.xml
+++ b/app/src/main/res/layout/content_car_dtls_frag.xml
@@ -52,6 +52,14 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
+        android:id="@+id/detail_fuel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_marginTop="20dip"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
         android:id="@+id/detail_transmission"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
