Start to add settings, to switch between list/grid view, and english/french languages

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,11 @@
     <color name="colorPrimary">#455399</color>
     <color name="colorPrimaryDark">#455399</color>
     <color name="colorAccent">#00C6AE</color>
+    <color name="none">#0000</color>
     <color name="white">#FFF</color>
     <color name="grey">#666</color>
     <color name="msg_no_cars">#999</color>
+    <color name="light_grey">#BBB</color>
     <color name="hint_enter_car">#89C3C3C3</color>
     <color name="car_list_text">#232323</color>
 </resources>
