--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".views.HomeActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -18,17 +18,28 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Back"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/tab_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="top"
+            android:layout_gravity="top|center"
             android:textAlignment="center"
+            android:layout_centerHorizontal="true"
             android:text="@string/title_cars"
             android:textSize="@dimen/msg_no_car" />
-    </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/button_more"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/dimen_10"
+            android:src="@drawable/ic_action_more"
+            android:background="@color/none"
+            android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
