--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,7 @@
     <dimen name="dot_height">30dp</dimen>
     <dimen name="dot_text_size">40sp</dimen>
     <dimen name="car_list_text">18sp</dimen>
+    <dimen name="title">24sp</dimen>
+    <dimen name="subtitle">20sp</dimen>
+    <dimen name="option">16dp</dimen>
 </resources>
