--- a/app/src/main/res/layout/car_list_row.xml
+++ b/app/src/main/res/layout/car_list_row.xml
@@ -10,23 +10,17 @@
     android:paddingRight="@dimen/activity_margin"
     android:paddingTop="@dimen/dimen_10">
 
-    <TextView
-        android:id="@+id/dot"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/dot_height"
-        android:layout_marginEnd="@dimen/dot_margin_right"
-        android:layout_marginTop="@dimen/dimen_10"
-        android:includeFontPadding="false"
-        android:textColor="@color/colorAccent"
-        android:lineSpacingExtra="0dp"
-        android:textSize="@dimen/dot_text_size"
-        />
+    <ImageView
+        android:id="@+id/car_img"
+        android:layout_width="@dimen/img_size"
+        android:layout_height="@dimen/img_size"
+        android:layout_marginEnd="@dimen/dimen_10"/>
 
     <TextView
         android:id="@+id/manufacturer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/dot"
+        android:layout_toEndOf="@+id/car_img"
         android:textColor="@color/car_list_text"
         android:textSize="@dimen/car_list_text"
         />
@@ -36,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/manufacturer"
-        android:layout_toEndOf="@+id/dot"
+        android:layout_toEndOf="@+id/car_img"
         android:textColor="@color/car_list_text"
         android:textSize="@dimen/car_list_text"
         />
