--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -10,9 +10,9 @@
     <TextView android:id="@+id/dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_10"
+        android:layout_marginBottom="@dimen/margin"
         android:fontFamily="sans-serif-medium"
-        android:lineSpacingExtra="8sp"
+        android:lineSpacingExtra="@dimen/text_line_spacing"
         android:text="@string/lbl_new_manufacturer_title"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/lbl_new_car_title"
