--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,15 +10,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/weight_size"
         android:layout_weight="1">
 
-        <Button
+        <ImageButton
             android:id="@+id/back_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/back_btn_width"
             android:layout_height="match_parent"
-            android:text="Back"
-            android:visibility="gone"
+            android:background="@color/none"
+            app:srcCompat="@drawable/ic_if_back_alt_134226"
+            android:visibility="visible"
             android:layout_alignParentStart="true" />
 
         <TextView
@@ -35,7 +36,7 @@
             android:id="@+id/button_more"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/dimen_10"
+            android:layout_marginEnd="@dimen/margin"
             android:src="@drawable/ic_action_more"
             android:background="@color/none"
             android:layout_alignParentEnd="true"/>
@@ -43,7 +44,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/weight_size"
         android:layout_weight="9"
         android:id="@+id/frame_layout">
 
@@ -59,7 +60,7 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/weight_size"
         android:layout_gravity="bottom"
         android:layout_weight="1"
         app:menu="@menu/navigation"
