--- a/app/src/main/res/layout/content_cars_frag.xml
+++ b/app/src/main/res/layout/content_cars_frag.xml
@@ -15,14 +15,7 @@
 
     <TextView
         android:id="@+id/empty_car_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/margin_top_no_car"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/msg_no_item"
-        android:textColor="@color/msg_no_cars"
-        android:textSize="@dimen/msg_no_car" />
+        style="@style/empty_car_view" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floating_action_button"
