--- a/app/src/main/res/layout/item_list_row.xml
+++ b/app/src/main/res/layout/item_list_row.xml
@@ -4,18 +4,17 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:paddingBottom="@dimen/dimen_10"
+    android:paddingBottom="@dimen/margin"
     android:paddingLeft="@dimen/activity_margin"
     android:paddingRight="@dimen/activity_margin"
-    android:paddingTop="@dimen/dimen_10">
+    android:paddingTop="@dimen/margin">
 
     <TextView
         android:id="@+id/dot"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/dot_height"
         android:layout_marginEnd="@dimen/dot_margin_right"
-        android:layout_marginTop="@dimen/dimen_10"
+        android:layout_marginTop="@dimen/margin"
         android:includeFontPadding="false"
         android:textColor="@color/colorAccent"
         android:lineSpacingExtra="0dp"
