--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="item_height">60dp</dimen>
+    <dimen name="grid_element_size">100dp</dimen>
+    <dimen name="grid_img_size">40dp</dimen>
 
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="activity_margin">16dp</dimen>
@@ -10,7 +12,8 @@
     <dimen name="msg_no_car">26sp</dimen>
     <dimen name="margin_top_no_car">120dp</dimen>
     <dimen name="lbl_new_car_title">20sp</dimen>
-    <dimen name="dimen_10">10dp</dimen>
+    <dimen name="margin">10dp</dimen>
+    <dimen name="back_btn_width">50dp</dimen>
     <dimen name="input_new_car">20sp</dimen>
     <dimen name="dot_height">30dp</dimen>
     <dimen name="dot_text_size">40sp</dimen>
@@ -19,5 +22,9 @@
     <dimen name="subtitle">20sp</dimen>
     <dimen name="option">16sp</dimen>
     <dimen name="img_size">80dp</dimen>
+    <dimen name="weight_size">0dp</dimen>
+    <dimen name="floating_button_elevation">16dp</dimen>
+    <dimen name="detail_margin_top">15dp</dimen>
+    <dimen name="text_line_spacing">8sp</dimen>
 
 </resources>
