--- a/app/src/main/res/layout/car_grid_element.xml
+++ b/app/src/main/res/layout/car_grid_element.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="@dimen/margin"
     android:layout_width="match_parent"
@@ -11,7 +10,8 @@
         android:id="@+id/car_img"
         android:adjustViewBounds="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/description_element_img"/>
 
     <TextView
         android:id="@+id/manufacturer"
