--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,7 @@
     <dimen name="subtitle">20sp</dimen>
     <dimen name="option">16sp</dimen>
     <dimen name="img_size">80dp</dimen>
+    <dimen name="details_img_size">320dp</dimen>
     <dimen name="weight_size">0dp</dimen>
     <dimen name="floating_button_elevation">16dp</dimen>
     <dimen name="detail_margin_top">15dp</dimen>
