new app version, for hockeyapp test purpose

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
     </style>
 
     <style name="AppTheme.Launcher">
-        <item name="android:windowBackground">@drawable/p205_t16_multi</item>
+        <item name="android:windowBackground">@drawable/p205_t16_multi_land</item>
     </style>
 
     <style name="empty_car_view">
