--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
     <item android:drawable="@android:color/white"/>
     <item>
-        <bitmap android:src="@drawable/p205_t16_multi"
+        <bitmap android:src="@drawable/p205_t16_multi_land"
             android:gravity="center"/>
     </item>
 </layer-list>
